--- a/challenges/filestorage/docker-compose.yml
+++ b/challenges/filestorage/docker-compose.yml
@@ -7,8 +7,9 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8000:8000"
+      - "8001:8001"
     volumes:
-      - .:/app
+      - ./app:/app
     environment:
       NODE_ENV: production
+    entrypoint: ["sh", "-c", "ls -la /app && cat /app/package.json && npm install && npm start"]
